Fix plugin page and modal too big
ISSUE: UNZERCSI-68

--- a/Resources/admin-ui/src/design/components/page.scss
+++ b/Resources/admin-ui/src/design/components/page.scss
@@ -9,7 +9,7 @@
   background-color: $adl-color--white;
   width: 100%;
   max-height: 100%;
-  min-height: 97vh;
+  min-height: 74vh;
 
   @include adl-screen--wide {
     flex-direction: row;
@@ -25,6 +25,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      min-height: 90%;
       height: calc(100% - 84px);
 
       .unzer-content-holder {
